modal creado arreglar cierre del modal

--- a/index.html
+++ b/index.html
@@ -145,6 +145,12 @@
         </section>
       </section>
 
+      <section id="imgModal" class="modal">
+          <span class="closeImg">&times;</span>
+          <img class="modal-content" id="img">
+          <section id="caption"></section>
+      </section>
+
       <section class="container">
         <section class="row">
           <section class="col-1"></section>
@@ -210,6 +216,6 @@
         
       </section>
 	<!-- Enlaza tu JS aquí -->
-	<script src="app.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
